cmake_minimum_required(VERSION 3.10)
project(AI_Simulation_CPP)
set(CMAKE_CXX_STANDARD 17)
file(GLOB SOURCES "*.cpp")
add_executable(AI_Simulation_CPP ${SOURCES})
find_package(SDL2 REQUIRED)
find_package(SDL2_ttf REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_TTF_INCLUDE_DIRS})
target_link_libraries(AI_Simulation_CPP ${SDL2_LIBRARIES} SDL2_ttf) 
